--- a/Demo/Views/Students/AddCourse.cshtml
+++ b/Demo/Views/Students/AddCourse.cshtml
@@ -367,10 +367,12 @@
                 </a>
             </li>
             <li>
+                <a href="/Courses/Instructor" class="menu-link" style="text-decoration:none;color:inherit;">
                 <div class="menu-item">
                     <span class="menu-icon">👨‍🏫</span>
                     <span>Instructors</span>
                 </div>
+                </a>
             </li>
             <li>
                 <div class="menu-item">
