--- a/Demo/Views/Students/StudentCourses.cshtml
+++ b/Demo/Views/Students/StudentCourses.cshtml
@@ -558,11 +558,10 @@
 					<li><a href="#">Resources</a></li>
 					<li><a href="#">About Us</a></li>
 					<li><a href="#">Support</a></li>
+					<li><a asp-controller="Students" asp-action="Profile">Profile</a></li>
+
 				</ul>
-				<div class="auth-buttons">
-					<a href="#" class="btn btn-login">Log In</a>
-					<a href="#" class="btn btn-signup">Sign Up</a>
-				</div>
+				
 			</nav>
 		</div>
 	</header>
