--- a/Demo/Views/Courses/Dashboard.cshtml
+++ b/Demo/Views/Courses/Dashboard.cshtml
@@ -176,7 +176,7 @@
 			</div>
 			<ul class="menu">
 				<li class="active">
-					<a href="/Courses/Dashboard" class="menu-link" style="text-decoration:none;color:inherit;">
+					<a href="/Courses/Dashboard" class="menu-link" style="text-decoration:none;color:inherit;"/>
 						<div class="menu-item">
 							<span class="menu-icon">📊</span>
 							<span>Dashboard</span>
@@ -307,7 +307,7 @@
 
 		@if (ViewBag.Instructors != null)
 		{
-			<div class="form-container" style="margin-left:270px;;">
+			<div class="form-container" style="margin-left:270px;">
 			<h3>Instructors</h3>
 			<table class="table" >
 				<thead>
@@ -351,4 +351,5 @@
 	</form>
 
 </body>
+</html>
 
